# ipay-platform

./: CHANGELOG.md  README.md  pyproject.toml  setup.cfg
.github/workflows/: build.yml  release.yml
src/ipay.egg-info/: PKG-INFO
src/ipayblacksaints2.egg-info/: PKG-INFO  SOURCES.txt
