[metadata]
name = ipay
version = 1.0.2-rc
description = U.S. fiat-native payment platform
author = Blacksaints2
author_email = you@example.com
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
package_dir =
    = src
include_package_data = true
python_requires = >=3.8

[options.packages.find]
where = src